--- a/love.html
+++ b/love.html
@@ -25,6 +25,27 @@
       transition: background 0.1s ease;
     }
 
+    /* Back Button */
+    .back-btn {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      background: #ff69b4;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 0 10px #ff69b4;
+      z-index: 999;
+      transition: background 0.3s ease;
+    }
+
+    .back-btn:hover {
+      background: #ff1493;
+      box-shadow: 0 0 15px #ff1493;
+    }
+
     h1 {
       font-size: 60px;
       color: #e91e63;
@@ -112,6 +133,9 @@
   </style>
 </head>
 <body>
+  <!-- Back Button -->
+  <a href="index.html" class="back-btn">← Back</a>
+
   <h1>I Love You ❤️</h1>
 
   <button class="heart-button" onclick="window.location.href='third.html'">❤️</button>
